@@ -3,13 +3,12 @@ package com.calculatorify.service;
 import com.calculatorify.model.dto.calculator.CalculatorEntry;
 import com.calculatorify.model.dto.http.HttpPathContext;
 import com.calculatorify.model.dto.http.HttpResponse;
-import com.calculatorify.util.Json;
-import com.calculatorify.util.http.HttpUtils;
 import com.sun.net.httpserver.HttpExchange;
 
-import java.io.IOException;
 import java.util.List;
 import java.util.UUID;
+
+import static com.calculatorify.util.Utils.nn;
 
 /**
  * @author Anton Gorokh
@@ -43,16 +42,11 @@ public class CalculatorService {
 			)
 	);
 
-   public HttpResponse getCalculators(HttpExchange exchange, HttpPathContext context) {
-       var params = context.queryParameters();
-       String q = params.getOrDefault("q", "").trim().toLowerCase();
-       List<CalculatorEntry> filtered = CALCULATORS;
-       if (!q.isEmpty()) {
-           filtered = CALCULATORS.stream()
-               .filter(c -> c.getTitle().toLowerCase().contains(q)
-                         || c.getDescription().toLowerCase().contains(q))
-               .collect(java.util.stream.Collectors.toList());
-       }
-       return HttpResponse.ok(filtered);
-   }
+	public HttpResponse getCalculators(HttpExchange exchange, HttpPathContext context) {
+		var fullText = nn(context.getRequestParam("q"), "");
+		var filtered = CALCULATORS.stream()
+				.filter(c -> c.getTitle().contains(fullText) || c.getDescription().contains(fullText))
+				.toList();
+		return HttpResponse.ok(filtered);
+	}
 }
